EXTRA_DIST = \
	ArrayCodec.java \
	ArraySlice.java \
	BoolCodec.java \
	Codec.java \
	DoubleCodec.java \
	FloatCodec.java \
	HyperCodec.java \
	IntCodec.java \
	OpaqueCodec.java \
	OpaqueSlice.java \
	OptionalCodec.java \
	StringCodec.java \
	Utility.java \
	VarArrayCodec.java \
	VarOpaqueCodec.java
