EXTRA_DIST = \
	ArrayCodec.java \
	ArraySlice.java \
	BoolCodec.java \
	Codec.java \
	DoubleCodec.java \
	FloatCodec.java \
	HyperCodec.java \
	IntCodec.java \
	OpaqueCodec.java \
	OpaqueSlice.java \
	OptionalCodec.java \
	StringCodec.java \
	Union.java \
	UnionCodec.java \
	Utility.java \
	VarArrayCodec.java \
	VarOpaqueCodec.java \
	XdrBuffer.java
