EXTRA_DIST = \
	ArraySlice.java \
	Codec.java \
	OpaqueSlice.java \
	Union.java \
	Utility.java \
	Void.java \
	XdrArray.java \
	XdrBool.java \
	XdrBuffer.java \
	XdrDouble.java \
	XdrFloat.java \
	XdrHyper.java \
	XdrInt.java \
	XdrOpaque.java \
	XdrOptional.java \
	XdrString.java \
	XdrUnion.java \
	XdrVoid.java
