EXTRA_DIST = \
	Array.java \
	Codec.java \
	Opaque.java \
	Slice.java \
	Union.java \
	Utility.java \
	Void.java \
	XdrArray.java \
	XdrBool.java \
	XdrBuffer.java \
	XdrDouble.java \
	XdrEnum.java \
	XdrFloat.java \
	XdrHyper.java \
	XdrInt.java \
	XdrOpaque.java \
	XdrOptional.java \
	XdrString.java \
	XdrUHyper.java \
	XdrUInt.java \
	XdrUnion.java \
	XdrVoid.java
